# webservice-axum

./: .pre-commit-config.yaml  Cargo.toml  Dockerfile  README.md
.github/workflows/: build.yml  release.yml
src/: app_state.rs  lib.rs  main.rs  routers.rs  settings.rs
src/routers/: app_meta.rs
