[package]
name = "webservice-axum"
version = "2.0.0"
edition = "2021"
build = "build.rs"

[profile.release]
lto = "fat"

[dependencies]
anyhow = "1"
axum = { version = "0.7", features = ["json", "macros"] }
clap = { version = "4", features = ["derive", "env", "wrap_help"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"] }

[build-dependencies]
vergen-git2 = "1"
